--- a/index.html
+++ b/index.html
@@ -5,8 +5,26 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+    <script src="https://kit.fontawesome.com/8100311596.js" crossorigin="anonymous"></script>
   </head>
   <body>
-    <h1>Hello World to branch b1</h1>
+    <section class="nav">
+      <i class="fa-solid fa-rocket"></i>
+      <ul class="nav-list">
+        <li class="nav-item">
+          <a href="#">Home</a> 
+        </li>
+        <li class="nav-item">
+          <a href="#">Contact</a> 
+        </li>
+        <li class="nav-item">
+          <a href="#">About</a> 
+        </li> 
+      </ul>
+      <a class="nav-item login"" href="#">Login</a>
+
+    </section>
+    <script src="index.js"></script>
   </body>
 </html>
